{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 9,
  "lineage": "a2bc75a7-9d5a-b622-e372-bd8374fc7078",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "yumin_ec2_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eddbd81024d3fbdd",
            "arn": "arn:aws:ec2:ap-northeast-2:742312829569:instance/i-03aa1b26ae09f1f08",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03aa1b26ae09f1f08",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b97101c8907e793b",
            "private_dns": "ip-172-31-3-101.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.3.101",
            "public_dns": "ec2-13-125-4-158.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.4.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e9b236e152343813",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-example-instance"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-061ba76d",
            "tags": {
              "Name": "yumin_test_server"
            },
            "tags_all": {
              "Name": "yumin_test_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a64d378aa4e551b7"
            ]
          },
          "dependencies": [
            "aws_security_group.instance",
            "aws_security_group.yumin_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:742312829569:security-group/sg-0a64d378aa4e551b7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a64d378aa4e551b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              }
            ],
            "name": "terraform-example-instance",
            "name_prefix": "",
            "owner_id": "742312829569",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-3b61e350"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "yumin_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:742312829569:security-group/sg-0e4e4b780afc1b0f1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e4e4b780afc1b0f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              }
            ],
            "name": "yumin_server_sg",
            "name_prefix": "",
            "owner_id": "742312829569",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-3b61e350"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}